--- a/RestaurantApp.Tests/RestaurantApp.Tests.csproj
+++ b/RestaurantApp.Tests/RestaurantApp.Tests.csproj
@@ -17,5 +17,9 @@
   <ItemGroup>
     <ProjectReference Include="..\RestaurantApp\RestaurantApp.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Service\" />
+  </ItemGroup>
   
 </Project>
